# mongo_auth

./: .env.example  .flake8  .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
app/: main.py  test_mongo.py
app/database/: database.py
app/env_vars/: __init__.py
app/exceptions/: __init__.py
app/models/: __init__.py  token.py  user.py
app/routes/: __init__.py
app/routes/user/: __init__.py  res_req_models.py  user.py
app/utils/: __init__.py  utils.py
docker/: Dockerfile  app.Dockerfile  compose.yaml  mongo_init.js
