[tool.poetry]
name = "mongo_auth"
version = "0.0.1"
description = "This project is a simple API that provides basic Authentication and Authorization."
authors = ["aldrickdev <aldrickdev@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.79.0"
uvicorn = "^0.18.2"
beanie = "^1.11.7"
email-validator = "^1.2.1"
pytz = "^2022.2.1"
python-multipart = "^0.0.5"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
python-dotenv = "^0.20.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
